Added update alerts

--- a/index.html
+++ b/index.html
@@ -77,8 +77,23 @@
         </div>
         <a href="#about"><i class="container-fluid fas fa-angle-double-down text-dark text-center animated flash slow infinite" id="view-scroll"></i></a>
     </section>
+    <br><br>
+    <section class="update container">
+        <div class="row text-center">
+            <div class="col-md-4">
+                <p class="alert alert-primary"> Spotlight is out</p>
+            </div>
+            <div class="col-md-4">
+                <p class="h3 alert alert-primary">Welcome to DIMUN</p>
+            </div>
+            <div class="col-md-4">
+                <p class="alert alert-primary">Chair positions are out </p>
+            </div>
+        </div>
+    </section>
 
     <section class="about container-fluid" id="about">
+
         <div class="text-center">
             <h1 class="text-dark h1">About Us </h1>
             <br>
