--- a/committees.html
+++ b/committees.html
@@ -41,7 +41,7 @@
                         <a class="dropdown-item" href="secretariat.html">Secretariat</a>
                         <a class="dropdown-item" href="so.html">Student Officers</a>
                         <a class="dropdown-item" href="delegates.html">Delegates</a>
-                        <a class="dropdown-item" href="alumini.html">Alumini</a>
+                        <a class="dropdown-item" href="alumni.html">Alumni</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="sop.html">Statement of purpose</a>
                     </div>
@@ -79,7 +79,7 @@
             <a class="list-group-item list-group-item-action" href="#committee-view1">GA1</a>
             <a class="list-group-item list-group-item-action" href="#committee-view2">GA2</a>
             <a class="list-group-item list-group-item-action" href="#committee-view3">ENV</a>
-            <a class="list-group-item list-group-item-action" href="#committee-view4">ECOSC</a>
+            <a class="list-group-item list-group-item-action" href="#committee-view4">ECOSOC</a>
             <a class="list-group-item list-group-item-action" href="#committee-view5">HRC</a>
             <a class="list-group-item list-group-item-action" href="#committee-view6">SPC</a>
             <a class="list-group-item list-group-item-action" href="#committee-view7">DIS</a>
