--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a class="dropdown-item" href="secretariat.html">Secretariat</a>
                         <a class="dropdown-item" href="so.html">Student Officers</a>
                         <a class="dropdown-item" href="delegates.html">Delegates</a>
-                        <a class="dropdown-item" href="alumini.html">Alumini</a>
+                        <a class="dropdown-item" href="alumni.html">Alumni</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="sop.html">Statement of purpose</a>
                     </div>
