Bold, link to respective pages

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
     <section class="update container">
         <div class="row text-center">
             <div class="col-md-4">
-                <p class="alert alert-primary"> Spotlight is out</p>
+                <a href=spotlight.html><strong><p class="alert alert-primary"> Spotlight sign-ups are live!</p></strong></a>
             </div>
             <div class="col-md-4">
                 <p class="h3 alert alert-primary">Welcome to DIMUN</p>
             </div>
             <div class="col-md-4">
-                <p class="alert alert-primary">Chair positions are out </p>
+                <a href=so.html><strong><p class="alert alert-primary">Committee chairs are out!</p></strong></a>
             </div>
         </div>
     </section>
