changed scroll location

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <a href="#about"><i class="container-fluid fas fa-angle-double-down text-dark text-center animated flash slow infinite" id="view-scroll"></i></a>
     </section>
     <br><br>
-    <section class="update container">
+    <section class="update container" id="about">
         <div class="row text-center">
             <div class="col-md-4">
                 <a href=spotlight.html><strong><p class="alert alert-primary"> Spotlight sign-ups are live!</p></strong></a>
@@ -90,10 +90,7 @@
                 <a href=so.html><strong><p class="alert alert-primary">Committee chairs are out!</p></strong></a>
             </div>
         </div>
-    </section>
-
-    <section class="about container-fluid" id="about">
-
+		<br>
         <div class="text-center">
             <h1 class="text-dark h1">About Us </h1>
             <br>
