--- a/accommodation.html
+++ b/accommodation.html
@@ -77,8 +77,7 @@
     <section>
         <div class="text-center container-fluid first">
             <div class="team">
-                <h1>Accommodation</h1>
-                <p>Below are choices of hotels </p>
+                <h1>Recommended Accommodation</h1>
                 <hr>
                 <div class="row">
                     <div class="col-md-5">
