--- a/transport.html
+++ b/transport.html
@@ -83,7 +83,8 @@
                 <div class="row">
                     <div class="col-md-5">
                         <h2>Dulwich College Beijing</h2>
-                        <p>The conference will take place at Dulwich College Beijing, a British International school located in Shunyi.
+                        <p>The conference will take place at Dulwich College Beijing, a British International school located in Shunyi.</p>
+						<p>Buses to and from Dulwich College Beijing will be available for outside-of-Beijing school delegations staying at hotels. Transporation to and from the airport or train station will need to be arranged with the hotel the delegation is staying at.</p>
                         <hr>
                         Location: 北京市顺义区首都机场路89号</p>
                     </div>
