--- a/secretariat.html
+++ b/secretariat.html
@@ -176,7 +176,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="col-md-4 Yixin-image">
+                                            <div class="col-md-4 Jackel-image">
                                             </div>
                                             <div class="col-md-8">
                                                 <p>Esteemed directors, honourable chairs and respected delegates,
