--- a/spotlight.html
+++ b/spotlight.html
@@ -24,7 +24,7 @@
     <header>
 
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-            <a class="navbar-brand text-dark" href="index.html"><strong>DIMUN IX</strong></a>
+            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN IX</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fas fa-list text-dark"></span>
@@ -82,7 +82,7 @@
                 <p>Since DIMUN VII, the annual DIMUN Spotlight has been bringing delegates to the stage. DIMUN Spotlight is a special event for DIMUN in which delegates can show off any talent that they might have, whether it be singing, magic tricks or something wholly different. Whatever it may be, DIMUN Spotlight is a time for delegates to take a break from a day full of resolutions and debating to enjoy performances and see just exactly what hidden talents the delegates of their committees have. It is a time for the delegates to show how much more their abilities extend beyond debating and writing, beyond even MUN itself. Delegates will all be encouraged to sign up and fill the evening with exciting performances and shows. Who knows what spectacular performances will there be this year?<br>
 				<br>To sign up for DIMUN IX Spotlight, register on this link <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=_szoC8ms60aAsVZE7XV4I6BBnc9lJj9JkV5VotsoG6VUNUFIQU05WVkyWFlEMUlGTE1YNllQMU9JNS4u" target="_blank">here</a>.
                 </p>
-				
+
                 <p><strong>DIMUN IX Spotlight Poster</strong></p>
                 <img src="img/DIMUN Spotlight.jpg" style="width:40%;min-width: 275px;height:auto;">
 				<hr>
