--- a/transport.html
+++ b/transport.html
@@ -24,7 +24,7 @@
     <header>
 
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-            <a class="navbar-brand text-dark" href="index.html"><strong>DIMUN IX</strong></a>
+            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN IX</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fas fa-list text-dark"></span>
