--- a/committees-seperate.html
+++ b/committees-seperate.html
@@ -70,8 +70,19 @@
     </nav>
 </header>
 
-    <section class="section-header text-center" id="section-header">
-        <strong><h1 class="display-1">COMMITTEES</h1></strong>
+    <section class="ga1 text-center">
+        <strong><h1 class="display-1">General Assembly</h1></strong>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
+                </div>
+            </div>
+        </div>
     </section>
 
 
