Added seperate template

--- a/committees-seperate.html
+++ b/committees-seperate.html
@@ -16,15 +16,17 @@
       <link href="css/mdb.min.css" rel="stylesheet">
       <!-- Custom DIMUN style -->
       <link href="css/dimun.css" rel="stylesheet">
+      <!-- Committee pages -->
+      <link href="css/dimun-com.css" rel="stylesheet">
       <!-- Font Awesome -->
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 </head>
-<body data-spy="scroll" data-target="#scroll-list" data-offset="250">
+<body>
     <header>
 
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-            <a class="navbar-brand text-dark" href="index.html"><strong>DIMUN IX</strong></a>
+            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN IX</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fas fa-list text-dark"></span>
@@ -70,16 +72,53 @@
     </nav>
 </header>
 
-    <section class="ga1 text-center">
-        <strong><h1 class="display-1">General Assembly</h1></strong>
+    <section class="section-header-com text-center" id="section-header">
     </section>
 
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
+    <section class="com-head">
+        <div class="row" style="margin-right:0;">
+            <div class="col-md-7 com-pic">
+                <img src="img/committee1.jpeg" style="height:83vh;width:auto;">
+            </div>
+            <div class="col-md-5 com-text">
+                <div class="text-center">
+                    <h1 class="text-dark h1">General Assembly 1</h1>
+                    <br>
+                    <hr>
+                    <br>
+                    <p class="text-dark lead">Combating the spread of diseases in South-East Asia
+
+                        <br><br>Addressing the misconduct of UN peacekeepers
+
+                        <br><br>Improving access to clean water and medical infrastructure in Afghanistan
+
+                        <br><br>Ensuring voting security in transitional countries in the Balkan region
+
+                    </p>
                 </div>
-                <div class="col-md-6">
+            </div>
+        </div>
+    </section>
+
+    <section class="chairs container">
+        <div class="row" style="margin-right:0;">
+            <div class="col-md-4">
+                <div class="container-com">
+                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <div class="overlay">
+                        <div class="text-com">Yulim Koo</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <p>Put picture of PDF with link to chair report</p>
+            </div>
+            <div class="col-md-4">
+                <div class="container-com">
+                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <div class="overlay">
+                        <div class="text-com">Mina Xiao</div>
+                    </div>
                 </div>
             </div>
         </div>
