--- a/committees.html
+++ b/committees.html
@@ -71,7 +71,7 @@
 </header>
 
     <section class="section-header text-center" id="section-header">
-        <strong><h1 class="display-1">COMMITTEES</h1></strong>
+        <strong><h1 class="display-1">Committees</h1></strong>
     </section>
 
     <div id="committees-scroll">
