--- a/committees-seperate.html
+++ b/committees-seperate.html
@@ -86,21 +86,21 @@
                     <br>
                     <hr>
                     <br>
-                    <p class="text-dark lead">Combating the spread of diseases in South-East Asia
-
-                        <br><br>Addressing the misconduct of UN peacekeepers
-
-                        <br><br>Improving access to clean water and medical infrastructure in Afghanistan
-
-                        <br><br>Ensuring voting security in transitional countries in the Balkan region
-
-                    </p>
-                </div>
+                    <p class="text-dark lead">General assembly consists of all members states and engages in a variety of issues raised by the member states. 
+						<br>The chairs for this council are; Yulim Koo and Mina Xiao.<br>
+						<br>The topics for this committee are;<br>
+							<li>Combating the spread of diseases in South-East Asia</li>
+                        		<li>Addressing the misconduct of UN peacekeepers</li>
+                        		<li>Improving access to clean water and medical infrastructure in Afghanistan</li>
+                        		<li>Ensuring voting security in transitional countries in the Balkan region</li>
+					</p>
+				</div>
             </div>
         </div>
     </section>
 
     <section class="chairs container">
+	<h2>Chairs for GA1</h2><br>
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
@@ -111,7 +111,10 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <p>Put picture of PDF with link to chair report</p>
+                <p align="center">
+				<br><br><br><br><br>
+				     Research reports will be uploaded as soon as they come in.
+				</p>
             </div>
             <div class="col-md-4">
                 <div class="container-com">
