--- a/SPC.html
+++ b/SPC.html
@@ -24,7 +24,6 @@
 </head>
 <body>
     <header>
-
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
             <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN IX</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -36,6 +35,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
                     <div class="dropdown-menu">
+                        <a class="dropdown-item" href="committees.html">Overview</a>
                         <a class="dropdown-item" href="GA1.html">GA1</a>
                         <a class="dropdown-item" href="GA2.html">GA2</a>
                         <a class="dropdown-item" href="ENV.html">ENV</a>
