--- a/alumni.html
+++ b/alumni.html
@@ -22,7 +22,6 @@
 </head>
 <body data-spy="scroll" data-target="#scroll-list" data-offset="300">
     <header>
-
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
             <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN IX</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -31,8 +30,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="committees.html">Committees</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="committees.html">Overview</a>
+                        <a class="dropdown-item" href="GA1.html">GA1</a>
+                        <a class="dropdown-item" href="GA2.html">GA2</a>
+                        <a class="dropdown-item" href="ENV.html">ENV</a>
+                        <a class="dropdown-item" href="ECOSOC.html">ECOSOC</a>
+                        <a class="dropdown-item" href="HRC.html">HRC</a>
+                        <a class="dropdown-item" href="SPC.html">SPC</a>
+                        <a class="dropdown-item" href="DIS.html">DIS</a>
+                        <a class="dropdown-item" href="SC.html">SC</a>
+                        <a class="dropdown-item" href="AP.html">AP</a>
+                    </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
@@ -50,7 +61,7 @@
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="transport.html">Transport</a>
-                        <a class="dropdown-item" href="accommodation.html">Accomadation</a>
+                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
                         <a class="dropdown-item" href="schedule.html">Schedule</a>
                     </div>
                 </li>
