Made booking information bold

--- a/accomadation.html
+++ b/accomadation.html
@@ -111,7 +111,7 @@
                         <p>Located just a few minutes from the Beijing Capital Airport, the hotel offers free airport shuttle, city and exhibition shuttle services. Guests have access to a recreation centre, an indoor and outdoor pool, and several international restaurants and casual cafes.
                         <hr>
                         Location: No.9 Xiao Tianzhu Road, Capital International Airport, Beijing, China, 100621</p>
-                        <a href="https://github.com/dadimun/pdfs/raw/master/CITIC.pdf">Booking information</a>
+                        <div class="alert alert-primary"><a href="https://github.com/dadimun/pdfs/raw/master/CITIC.pdf">Booking information</a></div>
                     </div>
                     <div class="col-md-7">
                         <div id="container-2" style="height: 60vh;width:100%;">
