--- a/GA1.html
+++ b/GA1.html
@@ -115,7 +115,7 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Yulim Koo.jpg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Yulim Koo</div>
                     </div>
