--- a/ENV.html
+++ b/ENV.html
@@ -129,7 +129,7 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Leighton DuYang.jpeg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Leighton DuYang</div>
                     </div>
