--- a/HRC.html
+++ b/HRC.html
@@ -129,7 +129,7 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Joy Ryu.jpg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Joy Ryu</div>
                     </div>
