--- a/SC.html
+++ b/SC.html
@@ -128,7 +128,7 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Eric Choi.png" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Eric Choi</div>
                     </div>
