Updated Photo - Julia Kim

--- a/AP.html
+++ b/AP.html
@@ -113,7 +113,7 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Julia Kim.jpeg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Julia Kim</div>
                     </div>
