Update photo - Ashley Zhou

--- a/SPC.html
+++ b/SPC.html
@@ -129,7 +129,7 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/Ashley Zhou.jpeg" alt="" class="image">
+                    <img src="img/Ashley Zhou.jpg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Ashley Zhou</div>
                     </div>
