Accommodation spelling error fix

--- a/schedule.html
+++ b/schedule.html
@@ -61,7 +61,7 @@
 	                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
 	                    <div class="dropdown-menu">
 	                        <a class="dropdown-item" href="transport.html">Transport</a>
-	                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
+                        <a class="dropdown-item" href="accommodation.html">Accommodation</a>
 	                        <a class="dropdown-item" href="schedule.html">Schedule</a>
 	                    </div>
 	                </li>
