Chair Photos upload and fix
Fixed some pics which had a "jpeg" to jpg, Uploaded more photos - Si In Park, Seung Yon Kim and Elina Du.

--- a/ECOSOC.html
+++ b/ECOSOC.html
@@ -129,7 +129,7 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Seung Yon Kim.jpg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Seung Yon Kim</div>
                     </div>
