--- a/SC.html
+++ b/SC.html
@@ -114,7 +114,7 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Si In Park.jpg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Si In Park</div>
                     </div>
