Added heather, travel

--- a/HRC.html
+++ b/HRC.html
@@ -97,7 +97,7 @@
                     <br>
                     <hr>
                     <br>
-                    <p class="text-dark lead">The Human Rights Council acts to safeguard the rights of all based on the United Nations declaration of human rights. 
+                    <p class="text-dark lead">The Human Rights Council acts to safeguard the rights of all based on the United Nations declaration of human rights.
 						<br>The chairs for this council are; Heather Leung and Joy Ryu.<br>
 						<br>The topics for this committee are;<br>
 							<li>Measures to protect the movement of refugees</li>
@@ -115,7 +115,7 @@
         <div class="row" style="margin-right:0;">
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Heather Leung.jpeg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Heather Leung</div>
                     </div>
