--- a/directors.html
+++ b/directors.html
@@ -103,6 +103,8 @@
 
                     <br><br>This year, positions will be allocated on a first come first serve basis, so please hand in the required letters and payments as soon as possible before the deadlines. As we are also looking for new schools to collaborate with, we would be grateful if you could supply us with suggestions of any other schools that might be interested in attending.
 
+                    <br><br>As DIMUN IX will be the first time in Beijing for many delegates, we have partnered with WildChina Education to offer tours around Beijing. For more information, click here <a href="travel.html">WildChina Tours</a>
+
                     <br><br>Please do not hesitate to contact us by email for further details regarding DIMUN IX. </p>
             </div>
         </div>
