--- a/travel.html
+++ b/travel.html
@@ -91,20 +91,25 @@
             <h1>WildChina Education</h1>
             <div class="team">
                 <hr>
-                <p>We have found that it was the first time for many delegates to come to Beijing, so we have decided to partner with WildChina Education to provide tours of Beijing for you/</p>
-                <img src="img/WildChina.png", width="180", height="398.3"><br>
+                <div class="container">
+                <div class="row">
+                    <div class="col-md-3"><img src="img/WildChina.png", width="180", height="398.3"></div>
+                    <div class="col-md-9" style="padding-top:100px;"><p>As a travel company staffed by educators, <a href="https://www.wildchina.com/education-tours" target="blank">WildChina Education Travel</a> prides itself on meeting the specific needs of each and every school.  Believing that travel and learning go hand in hand, WildChina works directly with institutions that feel the same... custom designing and delivering innovative
+                        experiential travel programs for groups of all ages and learning objectives.</p></div>
+                </div>
+            </div>
+            <br>
+                <p>By tailoring educational programs to best fit your learning objectives, schedule and budget, their local knowledge and networks open's doors to otherwise inaccessible insider opportunities.  WildChina's mission is to empower students to 'Experience China Differently'.  Therefore working with schools that 'desire much more than just seeing the sights', and creates interactive and empowering experiences that are truly life changing for our students and the communities we visit.  Providing the highest level of service and safety at all times, WildChina is proud to work with hundreds of the world’s leading educators.
+                </p><br>For more information, please do not hesitate to contact us <a href="mailto:dimun@dulwich-beijing.cn?subject=WildChina Enquiry">here</a>.<br><br><br>
                 <img src="https://www.wildchina.com/images/trip_thumbnail/Educationtoursstudenttravelsschooltrips-bird's-nest.jpg", width="300px", height="200px">
                 <img src="https://www.wildchina.com/images/trip_thumbnail/Great-wall-beijing.jpg", width="350px", height="233.333px">
                 <img src="https://www.wildchina.com/images/trip_thumbnail/EducationToursStudentTravelsSchoolTrips-Camping under the stars.jpg", width="300px", height="200px">
                 <br><br>
-                <p>As a travel company staffed by educators, <a href="https://www.wildchina.com/education-tours" target="blank">WildChina Education Travel</a> prides itself on meeting the specific needs of each and every school.  Believing that travel and learning go hand in hand, WildChina works directly with institutions that feel the same... custom designing and delivering innovative experiential travel programs for groups of all ages and learning objectives. 
                 <br><br>
-                By tailoring educational programs to best fit your learning objectives, schedule and budget, their local knowledge and networks open's doors to otherwise inaccessible insider opportunities.  WildChina's mission is to empower students to 'Experience China Differently'.  Therefore working with schools that 'desire much more than just seeing the sights', and creates interactive and empowering experiences that are truly life changing for our students and the communities we visit.  Providing the highest level of service and safety at all times, WildChina is proud to work with hundreds of the world’s leading educators.
-                </p><br>For more information, please do not hesitate to contact us <a href="mailto:dimun@dulwich-beijing.cn?subject=WildChina Enquiry">here</a>.<br><br><br>
             </div>
         </div>
     </section>
-    
+
     <!-- SCRIPTS -->
     <!-- JQuery -->
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
