--- a/ECOSOC.html
+++ b/ECOSOC.html
@@ -65,6 +65,7 @@
                         <a class="dropdown-item" href="transport.html">Transport</a>
                         <a class="dropdown-item" href="accommodation.html">Accommodation</a>
                         <a class="dropdown-item" href="schedule.html">Schedule</a>
+                        <a class="dropdown-item" href="travel.html">Excursion</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -97,7 +98,7 @@
                     <br>
                     <hr>
                     <br>
-                    <p class="text-dark lead">The Economic and Social Council engages with issues dealing with the welfare of member states. 
+                    <p class="text-dark lead">The Economic and Social Council engages with issues dealing with the welfare of member states.
 						<br>The chairs for this council are; Jaewon Choi and Seung Yon Kim.<br>
 						<br>The topics for this committee are;<br>
 							<li>Addressing the issue of urban slums in South America</li>
