--- a/alumni.html
+++ b/alumni.html
@@ -63,6 +63,7 @@
                         <a class="dropdown-item" href="transport.html">Transport</a>
                         <a class="dropdown-item" href="accommodation.html">Accommodation</a>
                         <a class="dropdown-item" href="schedule.html">Schedule</a>
+                        <a class="dropdown-item" href="travel.html">Excursion</a>
                     </div>
                 </li>
                 <li class="nav-item">
