--- a/travel.html
+++ b/travel.html
@@ -63,7 +63,7 @@
                         <a class="dropdown-item" href="transport.html">Transport</a>
                         <a class="dropdown-item" href="accommodation.html">Accommodation</a>
                         <a class="dropdown-item" href="schedule.html">Schedule</a>
-                        <a class="dropdown-item" href="travel.html">Travel</a>
+                        <a class="dropdown-item" href="travel.html">Excursion</a>
                     </div>
                 </li>
                 <li class="nav-item">
